[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.3",
]

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
